# mongrelionrc

./: .gitignore  Xmodmap  ackrc  alacritty.yml  bashrc  bspwmrc  gitconfig  irbrc  mpdconf  ncmpcpprc  nvimrc  polybar  rofi  screenrc  sxhkdrc  tmux.conf  vimrc  zellij.kdl  zshrc
ergodox/: MDErgo1-Default.json
helix/: config.toml  languages.toml
notes/: ansible.txt  awk.txt  curl.txt  dig.txt  esptool.py.txt  ffmpeg.txt  git.txt  jobs.txt  journalctl.txt  minifpv.txt  nc.txt  openssl.txt  pg.txt  sed.txt  sort.txt  sql.txt  ssh.txt  swarm.txt  tmux.txt  vagrant.txt
nvim/: init.lua  init.vim
nvim/lua/: globals.lua  keybindings.lua
nvim/lua/config/: init.lua  lsp.lua  telescope.lua  treesitter.lua
scripts/qmk/: base.sh  build.sh  eeprom-left.sh  eeprom-right.sh  flash.sh
steamdeck/: xwc.sh
wsl-config/: Makefile  main.yml  pyproject.toml
wsl-config/files/: journald.conf  resolv.conf  sudoers  wsl.conf
